--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
     </button>
 
     <p style="font-size:1.05rem;"><strong>Aviso!</strong><br><br>
-    O modo claro do site é <strong>um pouco</strong> claro mesmo. Na direita superior você tem a opção de deixar no modo escuro antes de entrar.</p>
-    <button id="enterBtn">entrar no site</button>
+    O modo claro do site é <strong>um pouco</strong> claro mesmo.. Aqui na direitinha você tem a opção de deixar no modo escuro ou claro antes de entrar.</p>
+    <button id="enterBtn">Entrar no site</button>
   </div>
 </div>
 
@@ -495,7 +495,7 @@ const eeMessages = {
   E2: "Fala aí professor, o meu foi o melhor né? kkkk brincadeira.",
   E3: "Professor, negócio tá feio pro corinthians.. Será que nois passa pra final da cdb?",
   E4: "Valeu aí pelo ano professor. Ano que vem tamo aí denovo.",
-  E5: "Professor, até prefiro fluzão, porém Flamengo tem que levar essa liberta e esse brasileirão. (Hoje é dia 24/11)"
+  E5: "Professor, até prefiro fluzão, porém Flamengo tem que levar essa liberta e esse brasileirão. (Feito dia 24/11)"
 };
 
 /* Mapped triggers:
