--- a/index.html
+++ b/index.html
@@ -430,21 +430,21 @@ function pick(a,b){ return Math.random() < 0.5 ? a : b; }
 
 document.getElementById("tiktokText").innerText = pick(
   "Assistir um tiktokzinho né JP? Vai ver uns memes, dar umas boas risadas e perder a noção do tempo kkkkk.",
-  "Assistir um tiktokzinho né JP? Para relaxar um pouquinho.."
+  "Assistir um tiktokzinho né JP? Para relaxar um pouquinho"
 );
 
 document.getElementById("igText").innerText = pick(
-  "Eai jp, será que teve partidaças na tntsports pra verificar? Algum stories novo de alguém? Vai checar o feed ou ver se chegou DM nova? 👀",
-  "Eai JP, alguém mandou mensagem?.. Ou vai só ver o feed mesmo?.."
+  "Eai jp, será que teve partidaças na tntsports pra tu ver o resultado? Algum stories novo de alguém? Vai checar o feed ou ver se chegou DM nova? 👀",
+  "Eai jp, alguém mandou mensagem?.. Ou vai só ver o feed mesmo?.."
 );
 
 document.getElementById("ytText").innerText = pick(
   "Vai ver uns vídeos top? Ou vai ficar só no shorts infinito que causa aquela procrastinação? 🤣",
-  "Assistir um videozinho né naqueles pique.. Ou só vai de shorts mesmo? haha"
+  "Assistir um videozinho né tlgd.. Ou só vai pesquisar algum tutorial mesmo? "
 );
 
 document.getElementById("gptText").innerText = pick(
-  "Vai só trocar uma com o chat? Resolver algum assunto sério? Ou só algum problema que tu teve e não tá sabendo resolver? 😂",
+  "Vai só trocar uma ideia com o chat? Resolver algum assunto sério? Ou só algum problema que tu teve e não tá sabendo resolver? 😂",
   "Chatzinho é daora mermão, vai tratar de algum assunto sério? Ou só algo que tu não conseguiu resolver ainda? Kkkkk"
 );
 
@@ -491,10 +491,10 @@ function showEggToast(title, msg){
 /* ------------------ Easter Eggs triggers & messages ------------------ */
 /* Messages for each egg (E1..E5) */
 const eeMessages = {
-  E1: "Como tu foi curioso, vai ter que adicionar ponto extra pra mim nesse trabalho!",
+  E1: "Como tu foi curioso, vai ter que adicionar ponto extra pra mim nesse trabalho hein.",
   E2: "Fala aí professor, o meu foi o melhor né? kkkk brincadeira.",
   E3: "Professor, negócio tá feio pro corinthians.. Será que nois passa pra final da cdb?",
-  E4: "Valeu aí pelo ano professor. Ano que vem tamo aí denovo.",
+  E4: "Seila oque falar ;-; vai corinthians.",
   E5: "Professor, até prefiro fluzão, porém Flamengo tem que levar essa liberta e esse brasileirão. (Feito dia 24/11)"
 };
 
